examples/test_package/Double_dc_no_hash_full_tool/steps/pl___monty_rough_run1/#test_analysis_2_result.txt
### **Evaluation Report: Monty Hall Problem in ProbLog**

---

#### **1. Document Title**
**Analysis of the Monty Hall Problem Implementation in ProbLog**

---

#### **2. Background and Purpose**
The Monty Hall problem is a classic probability puzzle where a player selects one of three doors, behind one of which is a prize. The host, who knows what's behind the doors, opens one of the remaining two doors, revealing no prize, and offers the player the choice to switch their selection. The goal of this evaluation is to verify the correctness of the ProbLog implementation of this problem, focusing on:
- The definition of probabilistic facts (`prize/1`).
- The logic for selecting and opening doors (`select_door/1`, `open_door/1`).
- The queries for winning strategies (`win_keep`, `win_switch`).

---

#### **3. Test Results Summary**
The provided code fails during execution due to the absence of the `open_door/1` predicate, which is required for the `win_switch` query. The error message is:
```
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for 'open_door/1' at 14:5.
```

**Failed Queries:**
- `win_switch`: Fails because `open_door/1` is undefined.

**Passed Queries:**
- `prize(_)`: Correctly defines the probabilistic distribution of the prize.
- `select_door(_)`: Correctly initializes the player's door selection.
- `win_keep`: Correctly checks if the player wins by keeping their initial choice.

---

#### **4. Failure Localization**
- **Failed Predicate:** `open_door/1`
  - **Location:** Line 14 (referenced in the error message).
  - **Issue:** The predicate is not defined, violating the requirements for Monty's door-opening behavior.

---

#### **5. Root Cause Analysis**
- **Logical Correctness:** The logic for `win_switch` depends on `open_door/1`, which is missing. This breaks the probabilistic reasoning chain.
- **Probabilistic Rules:** The current implementation correctly defines `prize/1` with uniform probabilities (`1/3`). However, the negation in `win_switch` (`\+ open_door(A)`) cannot be evaluated without `open_door/1`.
- **DeepProbLog:** Not used in this implementation.

---

#### **6. Overall Analysis**
- **Functional Requirements:**
  - **Classical Reasoning:** Partially met. The `select_door/1` and `prize/1` predicates are correctly defined.
  - **Probabilistic Reasoning:** Partially met. The `prize/1` distribution is correct, but the missing `open_door/1` prevents full probabilistic reasoning.
  - **Neural Network Integration:** Not applicable (DeepProbLog feature not used).

- **Edge Cases:**
  - The `member/2` predicate is correctly defined for list membership.
  - The `random_member/2` predicate is incomplete and unused in the current code.

---

#### **7. Error Summary**

| No. | Problem                     | Impact                          | Suggestion                                                                 |
|-----|-----------------------------|---------------------------------|----------------------------------------------------------------------------|
| 1   | `open_door/1` not defined   | `win_switch` query fails        | Define `open_door/1` as per the requirements (uniform random or deterministic). |
| 2   | `random_member/2` incomplete | Unused in current implementation | Remove or complete the predicate if needed for future extensions.          |

---

#### **8. Suggested Fix**
To resolve the error, define `open_door/1` as follows:
```prolog
open_door(Door) :-
    select_door(Selected),
    prize(Prize),
    findall(D, (member(D, [1,2,3]), \+ D = Selected, \+ D = Prize), Doors),
    random_member(Door, Doors).
```

This ensures Monty opens a door uniformly at random from the available non-selected, non-prize doors.

---

**Word Count:** ~450 words.